# cnacl

./: CMakeLists.txt
cmake/: AbiName.cmake  MakePlan.cmake
cmake/plans/: amd64_plan.cmake  armeabi_plan.cmake  ref_plan.cmake  x86_NO_SSE2_plan.cmake
okcompilers/: abiname_xcompile.c
randombytes/: CMakeLists.txt
tests/: CMakeLists.txt  box8.c  onetimeauth7.c  secretbox8.c
